force-app/main/default/objects/KimbleOne__SupplierRequisitionLineAllocation__c/KimbleOne__SupplierRequisitionLineAllocation__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Supplier Requisition Line Allocation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Requisition Line Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>