force-app/main/default/objects/KimbleOne__SupplierRequisitionLineAllocation__c/fields/KimbleOne__AllocatedAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllocatedAmount__c</fullName>
    <label>Allocated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>