force-app/main/default/objects/KimbleOne__SupplierRequisitionLineAllocation__c/fields/KimbleOne__DeliveryElement__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryElement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Delivery Element</label>
    <referenceTo>KimbleOne__DeliveryElement__c</referenceTo>
    <relationshipLabel>Supplier Requisition Line Allocations</relationshipLabel>
    <relationshipName>SupplierRequisitionLineAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>