force-app/main/default/objects/KimbleOne__SupplierRequisitionLineAllocation__c/fields/KimbleOne__ExpenseItem__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Expense Item</label>
    <referenceTo>KimbleOne__ExpenseItem__c</referenceTo>
    <relationshipLabel>Supplier Requisition Line Allocations</relationshipLabel>
    <relationshipName>SupplierRequisitionLineAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>