force-app/main/default/objects/KimbleOne__SupplierRequisitionLineAllocation__c/fields/KimbleOne__Milestone__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Milestone__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Milestone</label>
    <referenceTo>KimbleOne__Milestone__c</referenceTo>
    <relationshipLabel>Supplier Requisition Line Allocations</relationshipLabel>
    <relationshipName>RequisitionItemAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>