force-app/main/default/objects/KimbleOne__SupplierRequisitionLineAllocation__c/fields/KimbleOne__PeriodCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PeriodCost__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Period Cost</label>
    <referenceTo>KimbleOne__PeriodCost__c</referenceTo>
    <relationshipLabel>Supplier Requisition Line Allocations</relationshipLabel>
    <relationshipName>RequisitionItemAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>