force-app/main/default/objects/KimbleOne__SupplierRequisitionLineAllocation__c/fields/KimbleOne__SupplierRequisitionLine__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierRequisitionLine__c</fullName>
    <label>Supplier Requisition Line</label>
    <referenceTo>KimbleOne__SupplierRequisitionLine__c</referenceTo>
    <relationshipLabel>Supplier Requisition Line Allocations</relationshipLabel>
    <relationshipName>SupplierRequisitionLineAllocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>