force-app/main/default/objects/KimbleOne__SupplierRequisitionLineAllocation__c/fields/KimbleOne__SupplierRequisitionLineAllocType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierRequisitionLineAllocType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Allocation Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>SupplierRequisitionLineAllocType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Supplier Requisition Line Allocations</relationshipLabel>
    <relationshipName>SupplierRequisitionLineAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>